@@ -1,5 +1,5 @@
 /*
- *    Copyright 2013-2023 the original author or authors.
+ *    Copyright 2013-2026 the original author or authors.
  *
  *    Licensed under the Apache License, Version 2.0 (the "License");
  *    you may not use this file except in compliance with the License.
@@ -25,7 +25,6 @@ import java.io.Serializable;
 import java.lang.annotation.Annotation;
 import java.lang.reflect.Proxy;
 import java.lang.reflect.Type;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.Set;
 
@@ -101,7 +100,7 @@ public class MyBatisBean implements Bean<Object>, Serializable, PassivationCapab
 
   @Override
   public Set<Class<? extends Annotation>> getStereotypes() {
-    return Collections.emptySet();
+    return Set.of();
   }
 
   @Override
@@ -116,7 +115,7 @@ public class MyBatisBean implements Bean<Object>, Serializable, PassivationCapab
 
   @Override
   public Set<InjectionPoint> getInjectionPoints() {
-    return Collections.emptySet();
+    return Set.of();
   }
 
   @Override
